--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<section class="rules">
 		<h1>Игра в слова</h1>
 		<img src="img/1.jpg" width="200" height="200">
-		<p>Свое первый город введи в поле ниже.<br>
+		<p>Свой первый город введи в поле ниже.<br>
 			Второй и последующие твои города попросит ввести компьютер.</p>
 		<input type="text" name="city" id="userCity">
 		<button onclick="pushCity()" id="pushButton">Push CITY</button>
